--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ npm-debug.log
 
 02-primeiro-componente/app/cursos/cursos.component.js
 .vscode/angulardoc.json
+
+*node_modules/*
+"node_modules/" 
