--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0-beta.0",
-    "@angular/common": "^5.0.0-beta.0",
-    "@angular/compiler": "^5.0.0-beta.0",
-    "@angular/core": "^5.0.0-beta.0",
-    "@angular/forms": "^5.0.0-beta.0",
-    "@angular/http": "^5.0.0-beta.0",
-    "@angular/platform-browser": "^5.0.0-beta.0",
-    "@angular/platform-browser-dynamic": "^5.0.0-beta.0",
-    "@angular/router": "^5.0.0-beta.0",
+    "@angular/animations": "^6.1.7",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/http": "^6.1.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
     "@ionic-native/in-app-browser": "^4.7.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^6.3.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.0",
-    "@angular/compiler-cli": "^5.0.0-beta.0",
-    "@angular/language-service": "^5.0.0-beta.0",
+    "@angular/cli": "^6.2.2",
+    "@angular/compiler-cli": "^6.1.7",
+    "@angular/language-service": "^6.1.7",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~8.0.15",
@@ -45,6 +45,6 @@
     "protractor": "~5.2.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
-    "typescript": "~2.5.2"
+    "typescript": "~2.7.2"
   }
 }
